--- a/maven-test-example-project/pom.xml
+++ b/maven-test-example-project/pom.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>hu.reindeermobile</groupId>
@@ -65,6 +68,11 @@
 						<sdk>
 							<platform>8</platform>
 						</sdk>
+						<emulator>
+							<avd>and22</avd>
+							<wait>120000</wait>
+							<options>-no-skin -wipe-data -noaudio -no-window</options>
+						</emulator>
 						<zipalign>
 							<verbose>true</verbose>
 						</zipalign>
