--- a/maven-test-example-project/maven-test-example-app/pom.xml
+++ b/maven-test-example-project/maven-test-example-app/pom.xml
@@ -75,7 +75,7 @@
 					<nativeLibrariesDirectory>${project.basedir}/src/main/native</nativeLibrariesDirectory>
 					<sdk>
 						<platform>8</platform>
-<!-- 						<path>${env.ANDROID_HOME}</path> -->
+						<path>${env.ANDROID_HOME}</path>
 					</sdk>
 					<deleteConflictingFiles>true</deleteConflictingFiles>
 					<undeployBeforeDeploy>true</undeployBeforeDeploy>
