--- a/maven-test-example-project/pom.xml
+++ b/maven-test-example-project/pom.xml
@@ -67,6 +67,7 @@
 					<configuration>
 						<sdk>
 							<platform>8</platform>
+							<path>${env.ANDROID_HOME}</path>
 						</sdk>
 						<emulator>
 							<avd>and22</avd>
