--- a/ReindeerUtils/AndroidManifest.xml
+++ b/ReindeerUtils/AndroidManifest.xml
@@ -4,8 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
     <uses-sdk android:minSdkVersion="7" />
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application android:name="reindeer_utils" >
     </application>
 </manifest>
